fix: Verified icon alignment

--- a/src/app/room/round-results/round-results.component.scss
+++ b/src/app/room/round-results/round-results.component.scss
@@ -116,16 +116,17 @@ mat-chip-set {
   }
 
   .member-name {
-    display: flex;
-    align-items: center;
-    gap: 0.2rem;
     font-weight: 500;
     text-align: center;
 
     .verified-icon {
+      display: inline-block;
       height: 16px;
       width: 16px;
       font-size: 16px;
+      line-height: 20px;
+      vertical-align: sub;
+      overflow: visible;
       color: #345ca8;
     }
   }
